[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Button.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UIv2/Label.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Button" type="Button"]
margin_right = 5.0
margin_bottom = 8.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 1 )

[node name="BorderLeft" type="ColorRect" parent="."]
visible = false
margin_left = -1.0
margin_top = 1.0
margin_bottom = 10.0
mouse_filter = 2
color = Color( 0.109804, 0.101961, 0.176471, 1 )

[node name="BorderTop" type="ColorRect" parent="."]
visible = false
margin_left = 1.0
margin_top = -1.0
margin_right = 4.0
mouse_filter = 2
color = Color( 0.109804, 0.101961, 0.176471, 1 )

[node name="BorderRight" type="ColorRect" parent="."]
visible = false
margin_left = 5.0
margin_top = 1.0
margin_right = 6.0
margin_bottom = 10.0
mouse_filter = 2
color = Color( 0.109804, 0.101961, 0.176471, 1 )

[node name="BorderBottom" type="ColorRect" parent="."]
visible = false
margin_left = 1.0
margin_top = 11.0
margin_right = 4.0
margin_bottom = 12.0
mouse_filter = 2
color = Color( 0.109804, 0.101961, 0.176471, 1 )

[node name="Shadow" type="ColorRect" parent="."]
visible = false
margin_top = 8.0
margin_right = 5.0
margin_bottom = 10.0
mouse_filter = 2
color = Color( 0.14902, 0.172549, 0.266667, 1 )

[node name="ShadowBottom" type="ColorRect" parent="."]
visible = false
margin_left = 1.0
margin_top = 10.0
margin_right = 4.0
margin_bottom = 11.0
mouse_filter = 2
color = Color( 0.14902, 0.172549, 0.266667, 1 )

[node name="Padding" type="ColorRect" parent="."]
visible = false
margin_right = 5.0
margin_bottom = 8.0
mouse_filter = 2
color = Color( 0.227451, 0.266667, 0.396078, 1 )

[node name="PaddingBottom" type="ColorRect" parent="."]
visible = false
margin_left = 1.0
margin_top = 8.0
margin_right = 4.0
margin_bottom = 9.0
mouse_filter = 2
color = Color( 0.227451, 0.266667, 0.396078, 1 )

[node name="CornerTopLeft" type="ColorRect" parent="."]
visible = false
margin_right = 1.0
margin_bottom = 1.0
mouse_filter = 2
color = Color( 0.109804, 0.101961, 0.176471, 1 )

[node name="CornerTopRight" type="ColorRect" parent="."]
visible = false
margin_left = 4.0
margin_right = 5.0
margin_bottom = 1.0
mouse_filter = 2
color = Color( 0.109804, 0.101961, 0.176471, 1 )

[node name="CornerBottomLeft" type="ColorRect" parent="."]
visible = false
margin_top = 10.0
margin_right = 1.0
margin_bottom = 11.0
mouse_filter = 2
color = Color( 0.109804, 0.101961, 0.176471, 1 )

[node name="CornerBottomRight" type="ColorRect" parent="."]
visible = false
margin_left = 4.0
margin_top = 10.0
margin_right = 5.0
margin_bottom = 11.0
mouse_filter = 2
color = Color( 0.109804, 0.101961, 0.176471, 1 )

[node name="Icon" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 1 )
centered = false

[node name="Text" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 9.0
align = 1
valign = 1

[connection signal="button_down" from="." to="." method="_on_Button_button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
